src/Styles/Home.scss
@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@500&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

main {
  height: 100vh;
  width: 100%;
  background: linear-gradient(to bottom, #bbf1fa, #a3ddcb);
  display: flex;
  justify-content: center;
  align-items: center;
}
.glass {
  height: 85%;
  width: 60%;
  background: linear-gradient(
    to top,
    rgba(255, 255, 255, 0.4),
    rgba(255, 255, 255, 0.6)
  );
  backdrop-filter: blur(10rem);
  border-radius: 1.3rem;
  display: flex;
  box-shadow: 5px 20px 6px -6px rgba(0, 0, 0, 0.3);
  box-shadow: -2px -2px 6px -6px rgba(0, 0, 0, 0.3);
  border-width: 10px;
  border-color: rgb(181, 181, 250);
}
.left {
  flex: 30%;
  border-radius: 1.3rem 0 0 1.3rem;
  background-color: rgba(255, 255, 255, 0.6);
  display: flex;
  flex-direction: column;
  .avtar {
    flex: 40%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    h2 {
      color: #556052;
      margin-top: 15px;
      font-size: 17px;
      font-family: "Noto Serif JP", serif;
    }
    img {
      height: 90px;
      width: 90px;
      border-radius: 50%;
    }
  }
  .allLinks {
    flex: 60%;
  }
  .links {
    cursor: pointer;
    height: 70px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;

    .anchor {
      width: 100%;
      height: 70px;
      display: flex;
      justify-content: center;
      align-items: center;
      text-decoration: none;
      font-size: 20px;
      color: #556052;
      transition: 0.3s ease-out;
    }
    .anchor:hover {
      background-color: #7ec1da;
      color: #373837;
      font-size: 22px;
    }
  }
  .links:nth-child(4)::before {
    content: "";
    position: absolute;
    bottom: 0;
    width: 70%;
    background-color: #94e7e2;
    height: 3px;
  }
  .links::after {
    content: "";
    position: absolute;
    top: 0;
    width: 70%;
    background-color: #94e7e2;
    height: 3px;
  }
}
.right {
  flex: 70%;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}
.heading {
  position: absolute;
  top: 5%;
  left: 10%;
  height: 60px;
  width: 200px;
  background-color: rgba(255, 255, 255, 0.7);
  border-radius: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  h1 {
    color: #556052;
    margin-bottom: 4px;
    font-size: 35px;
    font-family: "Noto Serif JP", serif;
  }
}
.download_btn {
  position: absolute !important;
  height: 44px;
  width: 64px;
  top: 6%;
  right: 10% !important;
  background-color: rgba(255, 255, 255, 0.7) !important;
}
.download_link {
  height: 44px;
  width: 64px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  color: #556052;
  font-family: "Noto Serif JP", serif;
}
.download_icon {
  margin-right: 8px;
  color: #556052;
  font-size: 20px;
}
.content {
  margin-top: 20px;
  border-radius: 1.3rem;
  height: 60%;
  width: 80%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  // background-color: rgba(255, 255, 255, 0.7);
}
.socials {
  position: absolute;
  bottom: 5%;
  left: 23%;
  height: 60px;
  width: 300px;
  background-color: rgba(255, 255, 255, 0.7);
  border-radius: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  p {
    font-size: 12px;
  }
  p:nth-child(2) {
    margin-bottom: 0px;
  }
  a {
    text-decoration: none;
  }
  .icons {
    margin-left: 20px;
  }
}
.heading.error {
  position: static;
}
@media only screen and (max-width: 1070px) {
  .glass {
    height: 100%;
    width: 100%;
    border-radius: 0;
  }
  .left {
    border-radius: 0;
    .avtar {
      text-align: center;
    }
  }

  .socials {
    width: 100%;
    border-radius: 0;
    left: 0;
  }
}
@media only screen and (max-width: 600px) {
  p {
    font-size: 14px !important;
  }
  .icons.sass {
    margin-top: -12px !important;
  }
  .content.skills {
    justify-content: center;
    height: 70%;
  }
  .content.project {
    margin-top: 13vh;
    height: 70%;
    flex-grow: 1;
    overflow: visible !important;
  }
  .project_codes .liveAt {
    margin-left: 5px !important;
    margin-right: 10px !important ;
  }
  .project_card:nth-child(1) {
    margin-top: 0vh !important;
  }
  .content {
    justify-content: flex-start;
    width: 100%;
  }
  .project_card {
    h2 {
      font-size: 11px !important;
    }
  }
  .socials {
    width: 100%;
    bottom: 10%;
    justify-content: space-around;
    border-radius: 0;
    left: 0;
    p {
      font-size: 12px !important;
    }
  }
  .heading {
    width: 100%;
    left: 0;
    justify-content: flex-start;
    border-radius: 0;
    h1 {
      margin-left: 20px;
      font-size: 30px !important;
    }
  }
  .download_btn {
    top: 5%;
    z-index: 1000;
    height: 60px;
    background-color: rgba(255, 255, 255, 0.1) !important;
    // width: ;
  }
  .content.contact {
    p {
      font-size: 13px !important;
    }
    width: 100%;
  }
}
@media only screen and (max-width: 321px) {
  h2 {
    font-size: 15px !important;
  }
  .content.contact {
    p {
      font-size: 10px !important;
    }
  }
}

